# grocery_app

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  app.py  database.py
app/models/: __init__.py  carts.py  coupons.py  orders.py  products.py  text.txt  users.py  wishlist.py
app/routes/: authRouter.py  cartRouter.py  categoryRouter.py  checkout.py  coupons.py  productRouter.py  salesReport.py  wishlistRouter.py
app/utils/: __init__.py  auth_utils.py  imageUploader.py
